# python_package_template

./: .gitignore  README.md  pyproject.toml  run_tests.sh  setup.py
project/: main.py
tests/: test_main.py
